# GitHubMCP

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  create_repo.py  docker-compose.yml  exclude_list.txt  pyproject.toml  requirements.txt  test_http_client.py
.github/workflows/: ci.yml
github_mcp/: __init__.py  client.py  config.py  http_server.py  server.py
github_mcp/tools/: __init__.py  actions.py  branches.py  files.py  gists.py  issues.py  pull_requests.py  repositories.py  search.py  users.py
tests/: conftest.py  test_import.py
